--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ main {
     border-radius: 5px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
 
@@ -45,5 +45,15 @@ main {
     background-color: white;
     font-size: 1.75rem;
     font-weight: bold;
+    cursor: pointer;
+}
+.dice-button {
+    height: 50px;
+    width: 100px;
+    border: none;
+    border-radius: 6px;
+    background-color: #5035FF;
+    color: white;
+    font-size: 1.2rem;
     cursor: pointer;
 }
