--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,18 @@ main {
     align-items: center;
 }
 
+.title {
+    font-size: 40px;
+    margin: 0;
+}
+
+.instructions {
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    margin-top: 0;
+    text-align: center;
+}
+
 .dice-container {
     display: grid;
     grid-template: auto auto / repeat(5, 1fr);
@@ -47,6 +59,7 @@ main {
     font-weight: bold;
     cursor: pointer;
 }
+
 .dice-button {
     height: 50px;
     width: 100px;
@@ -57,6 +70,16 @@ main {
     font-size: 1.2rem;
     cursor: pointer;
 }
+
 .held {
+    background-color: #59E391 !important;
+    color: white;
+    border: 2px solid #4cc47c;
+}
+
+.win-message {
+    font-size: 2rem;
     color: #59E391;
+    font-weight: bold;
+    margin-top: 20px;
 }
